I don't remember what i did exactly

--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,11 @@
 /test_data/*
 /images/unused/*
 /launcher_screens/*.png
-exclude.txt
-release.bat
 ./run_as_admin.bat
 ./run_with_commandline.bat
 ./update_test_file.bat
 ./AutoClient.jar
-/release/tmp/*
+/release/*
 *.7z
 /cleanest.cfg
 /proguard/
