--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ category_dir: /
 # Note - if you enable this, and attempt to view your site locally you have to use the baseurl in your local path.
 # Example, you must use http://localhost:4000/path/to/blog
 #baseurl: /path/to/blog 
-baseurl: /auto-client/
+baseurl: /auto-client
 
 gh_repo: https://github.com/Darker/auto-client/
 gh_api: https://api.github.com/repos/Darker/auto-client/
