improved seo, split stylesheets

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: LoL AutoClient
 
 # Short description (goes below the title; it will also be used in the RSS feed)
 description: LoL League of legends auto pick champion, auto call lane, auto acccept afk check, auto login.
-keywords: lol, league of legends, instalock, insta lock
+keywords: lol, league of legends, instalock, insta lock, instalocker, autoqueue
 
 # Your name, as you want it to appear underneath each post and in the footer
 author: Darker
